--- a/style.css
+++ b/style.css
@@ -1,21 +1,42 @@
+/* style.css */
 body {
+    margin-inline: 50px;
     font-family: Arial, sans-serif;
     padding: 20px;
     background-color: #f4f4f4;
-  }
-  input[type="text"] {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+input[type="text"] {
+    width: 90%;
     padding: 8px;
-    margin: 8px 0;
+    margin: 8px 0px;
     font-size: 16px;
-  }
-  button {
+    
+}
+
+button {
     padding: 10px 20px;
     margin-right: 10px;
     font-size: 16px;
     cursor: pointer;
-  }
-  #output {
+}
+
+#output {
     margin-top: 15px;
     font-weight: bold;
-  }
+}
+
+#type {
+    font-size: 17px;
+}
+
+.workarea {
+    background-color: antiquewhite;
+    width: 650px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
